--- a/card-user/package.json
+++ b/card-user/package.json
@@ -7,8 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "start": "some command to be run",
-    "test": "(eslint lib || true) && jest"
+    "start": "",
+    "test": ""
   },
   "dependencies": {
     "react": "^18.2.0",
