--- a/card-user/package.json
+++ b/card-user/package.json
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "start": "react-scripts start",
-    "test": ""
+    "start": "react-scripts start"
   },
   "dependencies": {
     "react": "^18.2.0",
